money gem + test db

--- a/db/tag_scans.yml
+++ b/db/tag_scans.yml
@@ -31,3 +31,27 @@
   created_at: !ruby/object:DateTime 2012-12-11 01:55:54.860473000 -05:00
   created_on: 2012-12-11
   tagid: 194928
+- id: 9
+  created_at: !ruby/object:DateTime 2012-12-11 12:52:17.216019000 -05:00
+  created_on: 2012-12-11
+  tagid: 194928
+- id: 10
+  created_at: !ruby/object:DateTime 2012-12-11 12:57:21.456407000 -05:00
+  created_on: 2012-12-11
+  tagid: 194928
+- id: 11
+  created_at: !ruby/object:DateTime 2012-12-11 12:58:15.230897000 -05:00
+  created_on: 2012-12-11
+  tagid: 194928
+- id: 12
+  created_at: !ruby/object:DateTime 2012-12-11 12:58:19.735566000 -05:00
+  created_on: 2012-12-11
+  tagid: 194928
+- id: 13
+  created_at: !ruby/object:DateTime 2012-12-11 12:58:27.166227000 -05:00
+  created_on: 2012-12-11
+  tagid: 194928
+- id: 14
+  created_at: !ruby/object:DateTime 2012-12-11 13:00:25.427716000 -05:00
+  created_on: 2012-12-11
+  tagid: 194928
