--- a/db/money.yml
+++ b/db/money.yml
@@ -17,3 +17,12 @@
   dime: 4
   quarter: 10
   total: 4.99
+- id: 3
+  created_at: !ruby/object:DateTime 2012-12-11 14:35:15.687614000 -05:00
+  created_on: 2012-12-11
+  lasttotal: 4.99
+  penny: 0
+  nickel: 0
+  dime: 12
+  quarter: 2
+  total: 6.69
