--- a/db/money.yml
+++ b/db/money.yml
@@ -26,3 +26,12 @@
   dime: 12
   quarter: 2
   total: 6.69
+- id: 4
+  created_at: !ruby/object:DateTime 2012-12-12 00:22:42.368856000 -05:00
+  created_on: 2012-12-12
+  lasttotal: 1.0
+  penny: 4
+  nickel: 5
+  dime: 2
+  quarter: 6
+  total: 1.99
